plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'notification'
version = '0.0.1-SNAPSHOT'
description = 'Spring Boot project with Azure Notification Hubs, SMSCountry, SendGrid, Lombok, JUnit5, Mockito'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

jacoco {
    toolVersion = '0.8.12'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation("com.windowsazure:Notification-Hubs-java-sdk") {
        version { strictly("1.1.0") }
        exclude group: 'org.slf4j', module: 'slf4j-simple'
    }
    implementation 'com.sendgrid:sendgrid-java:4.10.3'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.5'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.postgresql:postgresql:42.7.4'
    implementation platform("com.azure.spring:spring-cloud-azure-dependencies:6.0.0")
    implementation "com.azure.spring:spring-cloud-azure-starter-keyvault-secrets"
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.5'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-inline:5.2.0'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-logging'
    implementation 'io.projectreactor:reactor-core:3.5.11'
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy tasks.jacocoTestReport // テスト後にレポート生成
}

jacocoTestReport {
    dependsOn tasks.test // レポートはテスト後に生成
    reports {
        xml.required = true
        csv.required = true
        html.required = true
        html.outputLocation = layout.buildDirectory.dir('reports/jacoco/test/html')
    }

    // ソースコードとクラスファイルの場所を明示
    sourceDirectories.setFrom(files('src/main/java'))
    classDirectories.setFrom(
        fileTree(dir: "$buildDir/classes/java/main", exclude: ['**/generated/**'])
    )
}